<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="app_name">CriminalIntent</string>
	<string name="title_activity_crime">CrimeActivity</string>
	
	<!-- Crimes -->
	<string name="crime_title_label">TITLE</string>
	<string name="crime_title_hint">Enter a title for the crime.</string>
	<string name="crime_details_label">DETAILS</string>
	<string name="crime_solved_label">Solved?</string>
	<string name="crime_suspect_text">Choose Suspect</string>
	<string name="crime_report_text">Send Report</string>
	<string name="crimes_title">Crimes</string>
	
	<!-- Dialogs -->
	<string name="date_picker_title">Date of crime</string>
	<string name="time_picker_title">Time of crime</string>
	<string name="datetime_picker_title">Date and Time of crime</string>
	
	<!-- Action Bar -->
	<string name="new_crime">New Crime</string>
	<string name="show_subtitle">Show Subtitle</string>
	<string name="hide_subtitle">Hide Subtitle</string>
	<string name="subtitle">This is the subtitle of the Action Bar.</string>
	<string name="options_dialog">Options (Dialog)</string>
	<string name="options_group">Options (Group)</string>
	
	<!-- Contextual Action -->
	<string name="delete_crime">DELETE CRIME</string>
	<string name="delete_photo">DELETE PHOTO</string>
	
	<!-- Empty List -->
	<string name="btn_empty_list">Add a new crime</string>
	<string name="tv_empty_list">This list is empty.</string>
	<string name="take">Take</string>

	<!-- Report -->
	<string name="crime_report">
		%1$s! The crime was discovered on %2$s. %3$s, and %4$s
	</string>
	<string name="crime_report_solved">The case is solved</string>
	<string name="crime_report_unsolved">The case is not solved</string>
	<string name="crime_report_no_suspect">There is no suspect</string>
	<string name="crime_report_suspect">The suspect is  %s</string>
	<string name="crime_report_subject">CriminalIntent Crime Report</string>
	<string name="send_report">Send crime report via</string>
	
</resources>
