<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical"  >
	
	<!-- Title Section -->
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		android:layout_marginLeft="16dp"
		android:layout_marginTop="16dp" >
		
		<!-- Left -->
		<LinearLayout
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:orientation="vertical"
			android:layout_marginRight="4dp">
			<ImageView
				android:id="@+id/crime_imageView"
				android:layout_width="80dp"
				android:layout_height="80dp"
				android:scaleType="centerInside"
				android:background="@android:color/darker_gray"
				android:cropToPadding="true"
				/>
			<ImageButton
				android:id="@+id/crime_imageButton"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:src="@android:drawable/ic_menu_camera" />
		</LinearLayout>

		<!-- Right -->
		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical"
			android:layout_weight="1">
			<TextView
				style="?android:listSeparatorTextViewStyle"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:text="@string/crime_title_label" />
			<EditText
				android:id="@+id/et_crime_title"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginLeft="16dp"
				android:layout_marginRight="16dp"
				android:ems="10"
				android:hint="@string/crime_title_hint" >
			</EditText>
		</LinearLayout>

	</LinearLayout>
	
	<!-- Details Section -->
	<TextView
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:text="@string/crime_details_label"
		style="?android:listSeparatorTextViewStyle" />
	<Button
		android:id="@+id/btn_crime_date"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginLeft="16dp"
		android:layout_marginRight="16dp" />
	<CheckBox
		android:id="@+id/cb_crime_solved"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginLeft="16dp"
		android:layout_marginRight="16dp"
		android:text="@string/crime_solved_label" />

	<Button
		android:id="@+id/crime_suspectButton"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginLeft="16dp"
		android:layout_marginRight="16dp"
		android:text="@string/crime_suspect_text" />

	<Button
		android:id="@+id/crime_reportButton"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginLeft="16dp"
		android:layout_marginRight="16dp"
		android:text="@string/crime_report_text" />
	
</LinearLayout>
